--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
+    "node-sass": "^4.13.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "^1.1.4",
